--- a/history/2023.03.30.md
+++ b/history/2023.03.30.md
@@ -1,6 +1,6 @@
-## E2E 테스트 실행시 서비스 로직의 메서드를 읽지 못하는 현상, 무엇이 문제인가?
+# E2E 테스트 실행시 서비스 로직의 메서드를 읽지 못하는 현상, 무엇이 문제인가?
 
-# "transform" 설정을
+## "transform" 설정을
 
 "esbuild-jest"를 테스트 실행 툴로 변경했다가, 다시 "ts-jest"로 변경하니 실행됨
 놀랍게도, esbuild-jest가 설치되지 않아서 생긴 문제
@@ -12,7 +12,7 @@
 먼저 nest.js application을 초기화하고 유저 객체를 생성하니 문제가 해결됨
 아직 테스트코드를 제대로 사용하지 않아서 이해도가 몹시 낮음.
 
-# 이전코드
+### 이전코드
 
 ```
 
@@ -35,7 +35,7 @@ it('should return 200 when jwt token is provided', async () => {
 
 ```
 
-# 변경된 코드
+### 변경된 코드
 
 ```
 
